# rigorous_recorder

./: README.md  pyproject.toml
commands/project/: publish
main/: setup.py
main/rigorous_recorder/: __init__.py  main.py
main/rigorous_recorder/__dependencies__/__sources__/file_system_py/: .gitrepo
main/rigorous_recorder/__dependencies__/__sources__/super_hash/: .gitrepo
main/rigorous_recorder/__dependencies__/__sources__/super_map/: .gitrepo
main/rigorous_recorder/file_system_py/: .gitrepo
main/rigorous_recorder/super_map/: .gitrepo  pyproject.toml  test.pickle
main/rigorous_recorder/super_map/main/super_map/: __init__.py  main.py
records/: my_study.pickle
settings/during_start/: 094_000_jeffs_git_shortcuts.sh
tests/: experiment_collection.py  record_keeper.py
