[tool.poetry]
name = "rigorous_recorder"
version = "0.0.1"
description = "Save everything in a filterable way"
authors=[]

[tool.extra]
author='Jeff Hykin'
author_email='jeff.hykin@gmail.com'
url='https://github.com/jeff-hykin/rigorous_recorder.git'
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
pip = "20.1.1"
super-hash = "^1.0.5"

[tool.poetry.dev-dependencies]
twine = "3.4.1"
"keyrings.alt" = "4.0.2"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
