[tool.poetry]
name = "rigorous_recorder"
version = "1.2.1"
description = "Save everything in a filterable way"
authors=[]

[tool.extra]
author='Jeff Hykin'
author_email='jeff.hykin@gmail.com'
url='https://github.com/jeff-hykin/rigorous_recorder.git'
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
simple-namespace = "^1.0.0"
python-include = "^2.0.0"
super-map = "^1.3.2"
super-hash = "^1.2.6"

[tool.poetry.dev-dependencies]
twine = "3.4.1"
"keyrings.alt" = "4.0.2"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
